# ada-proyecto-min-trie

./: .gitignore  CMakeLists.txt  README.md
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  args.cpp  args.hpp  main.cpp  permutation.cpp  permutation.hpp  trie.cpp  trie.hpp  trie2.cpp  trie2.hpp
